# breedspotter_app

./: Dockerfile  MODEL_CARD.md  Makefile  README.md  pyproject.toml  ruff.toml
src/breedspotter/: __init__.py  app.py  config.py  data.py  infer.py  models.py  train.py
tests/: test_imports.py  test_infer_smoke.py
